...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".DetailedViewScreen">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="382dp"
        android:layout_height="632dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
...
